--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,8 +3,23 @@ set -g @plugin 'tmux-plugins/tpm'
 
 
 # --- color scheme -----------------------------------------------------------
-# set -g @plugin 'seebi/tmux-colors-solarized'
-# set -g @plugin 'leighmcculloch/tmux-colours-superhero'
+set -g @plugin 'o0th/tmux-nova'
+
+set -g @nova-nerdfonts true
+set -g @nova-nerdfonts-left 
+set -g @nova-nerdfonts-right 
+
+set -g @nova-segment-mode "#{?client_prefix,Ω,ω}"
+set -g @nova-segment-mode-colors "#50fa7b #282a36"
+
+set -g @nova-segment-whoami "#(whoami)@#h"
+set -g @nova-segment-whoami-colors "#50fa7b #282a36"
+
+set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},}  #W"
+
+set -g @nova-rows 0
+set -g @nova-segments-0-left "mode"
+set -g @nova-segments-0-right "whoami"
 
 
 # --- easy pan control -------------------------------------------------------
@@ -18,52 +33,6 @@ setw -g pane-base-index 1
 
 # --- tmux-sensible ----------------------------------------------------------
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
-# Address vim mode switching delay (http://superuser.com/a/252717/65504)
-set -s escape-time 0
-
-# Increase scrollback buffer size from 2000 to 50000 lines
-set -g history-limit 50000
-
-# Increase tmux messages display duration from 750ms to 4s
-set -g display-time 4000
-
-# Refresh 'status-left' and 'status-right' more often, from every 15s to 5s
-set -g status-interval 5
-
-# (OS X) Fix pbcopy/pbpaste for old tmux versions (pre 2.6)
-#set -g default-command "reattach-to-user-namespace -l $SHELL"
-
-# Upgrade $TERM
-set -g default-terminal "screen-256color"
-
-# Emacs key bindings in tmux command prompt (prefix + :) are better than
-# vi keys, even for vim users
-set -g status-keys emacs
-
-# Focus events enabled for terminals that support them
-set -g focus-events on
-
-# Super useful when using "grouped sessions" and multi-monitor setup
-setw -g aggressive-resize on
-
-# Easier and faster switching between next/prev window
-bind C-p previous-window
-bind C-n next-window
-
-# Source .tmux.conf as suggested in `man tmux`
-bind R source-file '/Users/andrey/.config/tmux/tmux.conf'
-
-#--- statusbar mode ----------------------------------------------------------
-set -g @plugin 'MunifTanjim/tmux-mode-indicator'
-set -g status-left '#{tmux_mode_indicator}'
-
-
-# --- pomodoro plus ----------------------------------------------------------
-set -g @plugin 'olimorris/tmux-pomodoro-plus'
-set -g @pomodoro_notifications 'off' # Enable desktop notifications from your terminal
-set -g @pomodoro_show_intervals "#[fg=$color_gray][%s/%s]"
-set -g status-right "#{pomodoro_status}"
 
 
 # --- powerline --------------------------------------------------------------
