Told that the terminal outside supports RGB colour.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,12 +1,14 @@
 # --- tmux package manager ---------------------------------------------------
 set -g @plugin 'tmux-plugins/tpm'
 
+# --- told that the terminal outside supports RGB colour ---------------------
+set -as terminal-features ",xterm-256color*:RGB"
 
 # --- color scheme -----------------------------------------------------------
 set -g @plugin 'o0th/tmux-nova'
 
 set -g @nova-nerdfonts true
-set -g @nova-nerdfonts-left 
+set -g @nova-nerdfonms-left 
 set -g @nova-nerdfonts-right 
 
 set -g @nova-segment-mode "#{?client_prefix,Ω,ω}"
