Enable mouse scroll and copy.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,9 @@ set -g @plugin 'tmux-plugins/tpm'
 # --- told that the terminal outside supports RGB colour ---------------------
 set -as terminal-features ",xterm-256color*:RGB"
 
+# --- enable mouse scroll and copy -------------------------------------------
+setw -g mouse on
+
 # --- color scheme -----------------------------------------------------------
 set -g @plugin 'o0th/tmux-nova'
 
