Mouse scrolling and copy related fixes.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,7 +5,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -as terminal-features ",xterm-256color*:RGB"
 
 # --- enable mouse scroll and copy -------------------------------------------
-setw -g mouse on
+# setw -g mouse on
+# set -ga terminal-overrides ',xterm*:smcup@:rmcup@'
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # --- color scheme -----------------------------------------------------------
 set -g @plugin 'o0th/tmux-nova'
