Set term to 'xterm-256color'.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,12 +1,19 @@
 # --- tmux package manager ---------------------------------------------------
 set -g @plugin 'tmux-plugins/tpm'
 
+# --- set default terminal name ----------------------------------------------
+set -g default-terminal "xterm-256color"
+
 # --- told that the terminal outside supports RGB colour ---------------------
 set -as terminal-features ",xterm-256color*:RGB"
+# https://github.com/tmux/tmux/wiki/FAQ#how-do-i-use-utf-8
+# workaround issue with rendering ACS in a UTF-8 context
+# set-option -ga terminal-overrides ',*:enacs@:smacs@:rmacs@:acsc@'
+# and force True color support on.
+# set-option -ga terminal-overrides ',xterm-256color*:Tc'
 
 # --- enable mouse scroll and copy -------------------------------------------
 # setw -g mouse on
-# set -ga terminal-overrides ',xterm*:smcup@:rmcup@'
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # --- color scheme -----------------------------------------------------------
