--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,7 +20,7 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set -g @plugin 'o0th/tmux-nova'
 
 set -g @nova-nerdfonts true
-set -g @nova-nerdfonms-left 
+set -g @nova-nerdfonts-left 
 set -g @nova-nerdfonts-right 
 
 set -g @nova-segment-mode "#{?client_prefix,Ω,ω}"
