--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,17 @@
 # https://github.com/tmux-plugins/tpm
 set -g @plugin 'tmux-plugins/tpm'
 
+# --- switch window by meta+digit --------------------------------------------
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+bind -n M-3 select-window -t 3
+bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
+bind -n M-8 select-window -t 8
+bind -n M-9 select-window -t 9
+
 # --- set default terminal name ----------------------------------------------
 set -g default-terminal "xterm-256color"
 
