--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,6 +13,9 @@ bind -n M-7 select-window -t 7
 bind -n M-8 select-window -t 8
 bind -n M-9 select-window -t 9
 
+# --- always renumber when one is killed -------------------------------------
+set-option -g renumber-windows on
+
 # --- set default terminal name ----------------------------------------------
 set -g default-terminal "xterm-256color"
 
