Move status-bar on top.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -59,6 +59,8 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g base-index 1
 setw -g pane-base-index 1
 
+# --- Move status bar on top -------------------------------------------------
+set -g status-position top
 
 # --- tmux-sensible ----------------------------------------------------------
 set -g @plugin 'tmux-plugins/tmux-sensible'
