--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,9 +17,10 @@ bind -n M-9 select-window -t 9
 set-option -g renumber-windows on
 
 # --- set default terminal name ----------------------------------------------
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 
 # --- told that the terminal outside supports RGB colour ---------------------
+# setup value as $TERM outside of tmux
 set -as terminal-features ",xterm-256color*:RGB"
 # https://github.com/tmux/tmux/wiki/FAQ#how-do-i-use-utf-8
 # workaround issue with rendering ACS in a UTF-8 context
