Terminal related comments added.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,10 +17,12 @@ bind -n M-9 select-window -t 9
 set-option -g renumber-windows on
 
 # --- set default terminal name ----------------------------------------------
+# Make sure $TERM is set correctly.
+# For screen or tmux, $TERM should be screen-256color (not xterm-256color!)
+# In other cases if "256" does not appear in the string it's probably wrong. Try TERM=xterm-256color.
 set -g default-terminal "screen-256color"
-
-# --- told that the terminal outside supports RGB colour ---------------------
-# setup value as $TERM outside of tmux
+# told that the terminal outside supports RGB colour ---------------------
+# (setup value as $TERM outside of tmux)
 set -as terminal-features ",xterm-256color*:RGB"
 # https://github.com/tmux/tmux/wiki/FAQ#how-do-i-use-utf-8
 # workaround issue with rendering ACS in a UTF-8 context
