--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,11 @@
+# Some useful keys
+# prefix + R - reload config
+# prefix + I - install pulugins
+
 # --- tmux package manager ---------------------------------------------------
 # https://github.com/tmux-plugins/tpm
 set -g @plugin 'tmux-plugins/tpm'
+
 
 # --- switch window by meta+digit --------------------------------------------
 bind -n M-1 select-window -t 1
