Vim Tmux Navigator plugin added.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,6 +18,7 @@ bind -n M-7 select-window -t 7
 bind -n M-8 select-window -t 8
 bind -n M-9 select-window -t 9
 
+
 # --- always renumber when one is killed -------------------------------------
 set-option -g renumber-windows on
 
@@ -63,12 +64,20 @@ set -g @nova-segments-0-right "whoami"
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 
 
+# --- easy vim/nvim + tmux pane navigation -----------------------------------
+# NVIM companion plugin:
+# https://github.com/christoomey/vim-tmux-navigator
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+
 # --- Start windows and panes at 1, not 0 ------------------------------------
 set -g base-index 1
 setw -g pane-base-index 1
 
+
 # --- Move status bar on top -------------------------------------------------
 set -g status-position top
+
 
 # --- tmux-sensible ----------------------------------------------------------
 set -g @plugin 'tmux-plugins/tmux-sensible'
