Mode keys set to vi. Hotkeys description improved.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,8 @@
-# Some useful keys
-# prefix + R - reload config
-# prefix + I - install pulugins
+# ----------------------------------------------------------------------------
+# Some useful keys:
+#  prefix + R - reload config
+#  prefix + I - install pulugins
+# ----------------------------------------------------------------------------
 
 # --- tmux package manager ---------------------------------------------------
 # https://github.com/tmux-plugins/tpm
@@ -22,6 +24,7 @@ bind -n M-9 select-window -t 9
 # --- always renumber when one is killed -------------------------------------
 set-option -g renumber-windows on
 
+
 # --- set default terminal name ----------------------------------------------
 # Make sure $TERM is set correctly.
 # For screen or tmux, $TERM should be screen-256color (not xterm-256color!)
@@ -36,9 +39,18 @@ set -as terminal-features ",xterm-256color*:RGB"
 # and force True color support on.
 # set-option -ga terminal-overrides ',xterm-256color*:Tc'
 
+
 # --- enable mouse scroll and copy -------------------------------------------
 # setw -g mouse on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
+
+# --- vi-style navigation ----------------------------------------------------
+# prefix + [ - copy mode:
+#  space - start selection
+#  enter - copy selection
+setw -g mode-keys vi
+
 
 # --- color scheme -----------------------------------------------------------
 set -g @plugin 'o0th/tmux-nova'
