--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -59,17 +59,19 @@ set -g @nova-nerdfonts true
 set -g @nova-nerdfonts-left 
 set -g @nova-nerdfonts-right 
 
+nova_color="#50fa7b #282a36"
+
 set -g @nova-segment-mode "#{?client_prefix,Ω,ω}"
-set -g @nova-segment-mode-colors "#50fa7b #282a36"
+set -g @nova-segment-mode-colors "$nova_color"
 
-set -g @nova-segment-whoami "#(whoami)@#h"
-set -g @nova-segment-whoami-colors "#50fa7b #282a36"
+set -g @nova-segment-session "#{session_name} / #(whoami)@#h"
+set -g @nova-segment-session-colors "$nova_color"
 
-set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},}  #W"
+set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},} #W"
 
 set -g @nova-rows 0
 set -g @nova-segments-0-left "mode"
-set -g @nova-segments-0-right "whoami"
+set -g @nova-segments-0-right "session"
 
 
 # --- easy pan control -------------------------------------------------------
