Restore session option set to ON.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -88,6 +88,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @resurrect-strategy-nvim 'session'
+set -g @continuum-boot 'on'
 set -g @continuum-boot-options 'wezterm'
 
 
