Mouse support enabled.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,7 +41,7 @@ set -as terminal-features ",xterm-256color*:RGB"
 
 
 # --- enable mouse scroll and copy -------------------------------------------
-# setw -g mouse on
+setw -g mouse on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 
