Resurrect and Continuum related config.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -52,14 +52,16 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 setw -g mode-keys vi
 
 
-# --- restore tmux environment after system restart --------------------------
-# prefix + Ctrl-s - save
-# prefix + Ctrl-r - restore
+# --- saves all the little details from tmux environment ---------------------
+# - prefix + Ctrl-s - save
+# - prefix + Ctrl-r - restore
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-# install nvim sessions plugin: 'echasnovski/mini.sessions'
-# enable restore session for neovim
-set -g @resurrect-strategy-nvim 'session'
 
+# - install nvim sessions plugin: 'echasnovski/mini.sessions'
+# - enable restore session for neovim
+set -g @resurrect-strategy-nvim 'session'
+# - restoring pane contents
+set -g @resurrect-capture-pane-contents 'on'
 
 # --- color scheme -----------------------------------------------------------
 set -g @plugin 'o0th/tmux-nova'
