--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,11 +1,11 @@
 # ----------------------------------------------------------------------------
-# Some useful keys:
-#  prefix + R - reload config
-#  prefix + I - install pulugins
+# - Some useful keys:
+# -  prefix + R - reload config
+# -  prefix + I - install pulugins
 # ----------------------------------------------------------------------------
 
 # --- tmux package manager ---------------------------------------------------
-# https://github.com/tmux-plugins/tpm
+# - https://github.com/tmux-plugins/tpm
 set -g @plugin 'tmux-plugins/tpm'
 
 
@@ -26,18 +26,18 @@ set-option -g renumber-windows on
 
 
 # --- set default terminal name ----------------------------------------------
-# Make sure $TERM is set correctly.
-# For screen or tmux, $TERM should be screen-256color (not xterm-256color!)
-# In other cases if "256" does not appear in the string it's probably wrong. Try TERM=xterm-256color.
+# - Make sure $TERM is set correctly.
+# - For screen or tmux, $TERM should be screen-256color (not xterm-256color!)
+# - In other cases if "256" does not appear in the string it's probably wrong. Try TERM=xterm-256color.
 set -g default-terminal "screen-256color"
-# told that the terminal outside supports RGB colour ---------------------
-# (setup value as $TERM outside of tmux)
+# - told that the terminal outside supports RGB colour ---------------------
+# - (setup value as $TERM outside of tmux)
 set -as terminal-features ",xterm-256color*:RGB"
-# https://github.com/tmux/tmux/wiki/FAQ#how-do-i-use-utf-8
-# workaround issue with rendering ACS in a UTF-8 context
-# set-option -ga terminal-overrides ',*:enacs@:smacs@:rmacs@:acsc@'
-# and force True color support on.
-# set-option -ga terminal-overrides ',xterm-256color*:Tc'
+# - https://github.com/tmux/tmux/wiki/FAQ#how-do-i-use-utf-8
+# - workaround issue with rendering ACS in a UTF-8 context
+# - set-option -ga terminal-overrides ',*:enacs@:smacs@:rmacs@:acsc@'
+# - and force True color support on.
+# - set-option -ga terminal-overrides ',xterm-256color*:Tc'
 
 
 # --- enable mouse scroll and copy -------------------------------------------
@@ -46,9 +46,9 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 
 # --- vi-style navigation ----------------------------------------------------
-# prefix + [ - copy mode:
-#  space - start selection
-#  enter - copy selection
+# - prefix + [ - copy mode:
+# -  space - start selection
+# -  enter - copy selection
 setw -g mode-keys vi
 
 
@@ -90,8 +90,8 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 
 
 # --- easy vim/nvim + tmux pane navigation -----------------------------------
-# NVIM companion plugin:
-# https://github.com/christoomey/vim-tmux-navigator
+# - NVIM companion plugin:
+# - https://github.com/christoomey/vim-tmux-navigator
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 
@@ -113,6 +113,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 
 #-----------------------------------------------------------------------------
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# - Initialize TMUX plugin manager
+# - keep this line at the very bottom of tmux.conf
 run '~/.config/tmux/plugins/tpm/tpm'
 
