--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -74,6 +74,10 @@ nova_color="#50fa7b #282a36"
 
 set -g @nova-segment-mode "#{?client_prefix,Ω,ω}"
 set -g @nova-segment-mode-colors "$nova_color"
+# --- continuous saving of tmux environment ----------------------------------
+# - companion 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
 
 set -g @nova-segment-session "#{session_name} / #(whoami)@#h"
 set -g @nova-segment-session-colors "$nova_color"
