--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -63,30 +63,33 @@ set -g @resurrect-strategy-nvim 'session'
 # - restoring pane contents
 set -g @resurrect-capture-pane-contents 'on'
 
-# --- color scheme -----------------------------------------------------------
-set -g @plugin 'o0th/tmux-nova'
 
-set -g @nova-nerdfonts true
-set -g @nova-nerdfonts-left 
-set -g @nova-nerdfonts-right 
-
-nova_color="#50fa7b #282a36"
-
-set -g @nova-segment-mode "#{?client_prefix,Ω,ω}"
-set -g @nova-segment-mode-colors "$nova_color"
 # --- continuous saving of tmux environment ----------------------------------
 # - companion 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 
-set -g @nova-segment-session "#{session_name} / #(whoami)@#h"
-set -g @nova-segment-session-colors "$nova_color"
 
-set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},} #W"
+# --- color scheme -----------------------------------------------------------
+set -g @plugin 'dracula/tmux'
 
-set -g @nova-rows 0
-set -g @nova-segments-0-left "mode"
-set -g @nova-segments-0-right "session"
+set -g @dracula-show-powerline true
+set -g @dracula-show-left-sep 
+set -g @dracula-show-right-sep 
+
+# - it can accept
+# - `hostname` (full hostname), `session`, `shortname` (short name), `smiley`,
+# - `window`, or any character. 
+set -g @dracula-show-left-icon session
+# - default is 1, it can accept any number and 0 disables padding.
+set -g @dracula-left-icon-padding 0
+
+# - available plugins:
+# - battery, cpu-usage, git, gpu-usage, ram-usage, tmux-ram-usage, network, network-bandwidth,
+# - network-ping, ssh-session, attached-clients, network-vpn, weather, time, mpc, spotify-tui,
+# - kubernetes-context, synchronize-panes
+set -g @dracula-plugins "synchronize-panes"
+set -g @dracula-synchronize-panes-label "󱎡"
 
 
 # --- easy pan control -------------------------------------------------------
