Session icon added.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -80,7 +80,7 @@ set -g @dracula-show-right-sep 
 # - it can accept
 # - `hostname` (full hostname), `session`, `shortname` (short name), `smiley`,
 # - `window`, or any character. 
-set -g @dracula-show-left-icon session
+set -g @dracula-show-left-icon " #S"
 # - default is 1, it can accept any number and 0 disables padding.
 set -g @dracula-left-icon-padding 0
 
