Prevent detach on destroy last window.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,6 +25,10 @@ bind -n M-9 select-window -t 9
 set-option -g renumber-windows on
 
 
+# --- do not detach on destroy last window -----------------------------------
+set-option -g detach-on-destroy off
+
+
 # --- set default terminal name ----------------------------------------------
 # - Make sure $TERM is set correctly.
 # - For screen or tmux, $TERM should be screen-256color (not xterm-256color!)
