docs: update TPM commands info

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,8 @@
 # - Some useful keys:
 # -  prefix + R - reload config
 # -  prefix + I - install pulugins
+# -  prefix + U - update plugins
+# -  prefix + alt + u - uninstall plugins
 # ----------------------------------------------------------------------------
 
 # --- tmux package manager ---------------------------------------------------
