feat(plugin): add tmux-suspend plugin

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -125,6 +125,11 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'erikw/tmux-powerline'
 
 
+# --- tmux suspend -----------------------------------------------------------
+# - press F12 to suspend your local tmux session
+set -g @plugin 'MunifTanjim/tmux-suspend'
+
+
 #-----------------------------------------------------------------------------
 # - Initialize TMUX plugin manager
 # - keep this line at the very bottom of tmux.conf
