--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -131,6 +131,12 @@ set -g @plugin 'MunifTanjim/tmux-suspend'
 
 
 #-----------------------------------------------------------------------------
+# - install tpm and plugins automatically when tmux is started
+if "test ! -d ~/.config/tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm && ~/.config/tmux/plugins/tpm/bin/install_plugins'"
+
+
+#-----------------------------------------------------------------------------
 # - Initialize TMUX plugin manager
 # - keep this line at the very bottom of tmux.conf
 run '~/.config/tmux/plugins/tpm/tpm'
