--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,6 +23,10 @@ bind -n M-8 select-window -t 8
 bind -n M-9 select-window -t 9
 
 
+# --- open / attach session with fzf -----------------------------------------
+bind-key -r f run-shell "tmux neww ~/.config/zsh/bin/tmux-sessionizer"
+
+
 # --- always renumber when one is killed -------------------------------------
 set-option -g renumber-windows on
 
