--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -65,19 +65,19 @@ setw -g mode-keys vi
 # --- saves all the little details from tmux environment ---------------------
 # - prefix + Ctrl-s - save
 # - prefix + Ctrl-r - restore
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # - install nvim sessions plugin: 'echasnovski/mini.sessions'
 # - enable restore session for neovim
-set -g @resurrect-strategy-nvim 'session'
+# set -g @resurrect-strategy-nvim 'session'
 # - restoring pane contents
-set -g @resurrect-capture-pane-contents 'on'
+# set -g @resurrect-capture-pane-contents 'on'
 
 
 # --- continuous saving of tmux environment ----------------------------------
 # - companion 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-restore 'on'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @continuum-restore 'on'
 
 
 # --- color scheme -----------------------------------------------------------
