fix(session): run sessionizer as usual script

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,7 +24,7 @@ bind -n M-9 select-window -t 9
 
 
 # --- open / attach session with fzf -----------------------------------------
-bind-key -r f run-shell "tmux neww ~/.config/zsh/bin/tmux-sessionizer"
+bind-key -r f run-shell "~/.config/zsh/bin/tmux-sessionizer"
 
 
 # --- always renumber when one is killed -------------------------------------
