--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,6 @@
 # ----------------------------------------------------------------------------
 # - Some useful keys:
+# -  prefix + f - open / attach session
 # -  prefix + R - reload config
 # -  prefix + I - install pulugins
 # -  prefix + U - update plugins
@@ -24,7 +25,7 @@ bind -n M-9 select-window -t 9
 
 
 # --- open / attach session with fzf -----------------------------------------
-bind-key -r f run-shell "~/.config/zsh/bin/tmux-sessionizer"
+bind-key -r f run-shell "~/.config/tmux/bin/tmux-sessionizer"
 
 
 # --- always renumber when one is killed -------------------------------------
