fix(term): better terminal support

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,18 +37,13 @@ set-option -g detach-on-destroy off
 
 
 # --- set default terminal name ----------------------------------------------
-# - Make sure $TERM is set correctly.
-# - For screen or tmux, $TERM should be screen-256color (not xterm-256color!)
-# - In other cases if "256" does not appear in the string it's probably wrong. Try TERM=xterm-256color.
-set -g default-terminal "screen-256color"
-# - told that the terminal outside supports RGB colour ---------------------
-# - (setup value as $TERM outside of tmux)
-set -as terminal-features ",xterm-256color*:RGB"
-# - https://github.com/tmux/tmux/wiki/FAQ#how-do-i-use-utf-8
-# - workaround issue with rendering ACS in a UTF-8 context
-# - set-option -ga terminal-overrides ',*:enacs@:smacs@:rmacs@:acsc@'
-# - and force True color support on.
-# - set-option -ga terminal-overrides ',xterm-256color*:Tc'
+# make sure $TERM is set correctly
+# looks like this options is better:
+#  - italic support
+#  - no warnings in nvim :checkhealth
+set -g default-terminal "tmux-256color"
+set -a terminal-overrides ",xterm-256color:Tc"
+set -a terminal-features 'xterm-256color:RGB'
 
 
 # --- enable mouse scroll and copy -------------------------------------------
