feat: update TERM environment variable settings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -46,6 +46,13 @@ set -a terminal-overrides ",xterm-256color:Tc"
 set -a terminal-features 'xterm-256color:RGB'
 
 
+# --- image preview to work correctly in tmux --------------------------------
+# more info here: https://yazi-rs.github.io/docs/image-preview
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
+
 # --- enable mouse scroll and copy -------------------------------------------
 setw -g mouse on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
