feat(copy-mode): add vim-like selection and copy bindings
Adds vim-style key bindings in tmux copy-mode-vi:
- 'v' to begin selection
- 'C-v' for rectangle selection
- 'y' to copy selection and exit copy mode

Also unbinds MouseDrag1Pane in copy-mode-vi to avoid conflicts with
keyboard selection. This improves consistency for users familiar with
vim navigation and selection.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -64,6 +64,15 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 # -  enter - copy selection
 setw -g mode-keys vi
 
+# and vim bindings in copy mode:
+# - v to begin selection
+# - C-v to begin rectangle selection
+# - y to copy selection and exit copy mode
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+unbind -T copy-mode-vi MouseDragEnd1Pane
+
 
 # --- saves all the little details from tmux environment ---------------------
 # - prefix + Ctrl-s - save
