feat(navigation): switch to smart-splits.nvim for pane movement
Replace vim-tmux-navigator plugin with smart-splits.nvim for improved
integration with Neovim. Update tmux.conf to reflect the new plugin and
provide relevant documentation links.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -121,7 +121,13 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 # --- easy vim/nvim + tmux pane navigation -----------------------------------
 # - NVIM companion plugin:
 # - https://github.com/christoomey/vim-tmux-navigator
-set -g @plugin 'christoomey/vim-tmux-navigator'
+# set -g @plugin 'christoomey/vim-tmux-navigator'
+
+
+# --- easy vim/nvim + tmux pane navigation -----------------------------------
+# - smart-splits.nvim companion plugin:
+# - https://github.com/mrjones2014/smart-splits.nvim
+set -g @plugin 'mrjones2014/smart-splits.nvim'
 
 
 # --- Start windows and panes at 1, not 0 ------------------------------------
