--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -128,6 +128,7 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 # - smart-splits.nvim companion plugin:
 # - https://github.com/mrjones2014/smart-splits.nvim
 set -g @plugin 'mrjones2014/smart-splits.nvim'
+set -g @smart-splits_no_wrap 'no_wrap' # to disable wrapping. (any value disables wrapping)
 
 
 # --- Start windows and panes at 1, not 0 ------------------------------------
